--- a/.github/workflows/python-ci-cd.yml
+++ b/.github/workflows/python-ci-cd.yml
@@ -24,7 +24,7 @@ jobs:
         run: pytest --junitxml=report.xml
 
       - name: Upload test report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4   # v3 орнына v4
         with:
           name: pytest-report
           path: report.xml
