--- a/.github/workflows/python-ci-cd.yml
+++ b/.github/workflows/python-ci-cd.yml
@@ -1,28 +1,31 @@
+
 name: Simple Python Calculator CI/CD
+
 on:
-push:
-branches: [ "main" ]
-pull_request:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
-test:
-runs-on: ubuntu-latest
-steps:
-- name: Checkout repository
-uses: actions/checkout@v3
-- name: Set up Python
-uses: actions/setup-python@v5
-with:
-python-version: "3.11"
-- name: Install dependencies
-run: |
-python -m pip install --upgrade pip
-pip install -r requirements.txt
-- name: Run tests
-run: |
-mkdir -p test-results
-pytest --junitxml=test-results/report.xml
-- name: Upload test report
-uses: actions/upload-artifact@v4
-with:
-name: test-report
-path: test-results/report.xml
+  test:
+    runs-on ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install pytest
+        run: pip install pytest
+
+      - name: Run tests with XML report
+        run: pytest --junitxml=report.xml
+
+      - name: Upload test report
+        uses: actions/upload-artifact@v4   # v3 орнына v4
+        with:
+          name: pytest-report
+          path: report.xml
