--- a/.github/workflows/python-ci-cd.yml
+++ b/.github/workflows/python-ci-cd.yml
@@ -1,4 +1,4 @@
-name: Simple Python Calculator CI/CD
+name: Python Tests with HTML Report
 
 on:
   push:
@@ -8,23 +8,32 @@ on:
 
 jobs:
   test:
-    runs-on : ubuntu-latest
+    runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
 
-      - name: Install pytest
-        run: pip install pytest
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install junit2html
 
-      - name: Run tests with XML report
-        run: pytest --junitxml=report.xml
+    - name: Run tests and generate XML report
+      run: |
+        pytest --junitxml=report.xml
 
-      - name: Upload test report
-        uses: actions/upload-artifact@v4   # v3 орнына v4
-        with:
-          name: pytest-report
-          path: report.xml
+    - name: Convert XML report to HTML
+      run: |
+        junit2html report.xml report.html
+
+    - name: Upload HTML test report
+      uses: actions/upload-artifact@v4
+      with:
+        name: pytest-html-report
+        path: report.html
