--- a/.github/workflows/python-ci-cd.yml
+++ b/.github/workflows/python-ci-cd.yml
@@ -1,4 +1,4 @@
-name: Python Tests with HTML Report
+name: Simple Python Calculator CI/CD
 
 on:
   push:
@@ -9,31 +9,27 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install junit2html
+      - name: Install dependencies
+        run: |
+          pip install pytest
+          pip install junit2html   # XML → HTML конвертация үшін
 
-    - name: Run tests and generate XML report
-      run: |
-        pytest --junitxml=report.xml
+      - name: Run tests and generate XML report
+        run: pytest --junitxml=report.xml
 
-    - name: Convert XML report to HTML
-      run: |
-        junit2html report.xml report.html
+      - name: Convert XML report to HTML
+        run: junit2html report.xml report.html
 
-    - name: Upload HTML test report
-      uses: actions/upload-artifact@v4
-      with:
-        name: pytest-html-report
-        path: report.html
+      - name: Upload HTML test report
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-html-report
+          path: report.html
